files/ilb_deploy.yaml
# web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hostname
  name: hostname-server
spec:
  selector:
    matchLabels:
      app: hostname
  minReadySeconds: 60
  replicas: 3
  template:
    metadata:
      labels:
        app: hostname
    spec:
      containers:
        - image: k8s.gcr.io/serve_hostname:v1.4
          name: hostname-server
          ports:
            - containerPort: 9376
              protocol: TCP
      terminationGracePeriodSeconds: 90
